Replace mutable lists with List.of