@@ -29,8 +29,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import static com.yahoo.vespa.hosted.controller.api.integration.LogEntry.Type.debug;
@@ -283,7 +283,7 @@ public class InternalStepRunnerTest {
     }
 
     private void assertTestLogEntries(RunId id, Step step, LogEntry... entries) {
-        assertEquals(Arrays.asList(entries), tester.jobs().details(id).get().get(step));
+        assertEquals(List.of(entries), tester.jobs().details(id).get().get(step));
     }
 
     @Test
